DOT FILE & IMAGE: Updated the folder managing for dot file and images based on automaton input text file