@@ -1,7 +1,6 @@
-package classes;
+package ale2.classes.Automaton;
 
 import javax.imageio.ImageIO;
-import javax.swing.*;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.FileNotFoundException;
@@ -10,6 +9,7 @@ import java.io.PrintWriter;
 
 public class AutomatonFileManager {
     private static final String RESOURCE_FOLDER = "/src/main/resources";
+    private static String dotBasePath;
 
     public static void createDotFile(Automaton automaton) throws FileNotFoundException {
         PrintWriter out = new PrintWriter(getDotFilePath());
@@ -18,13 +18,16 @@ public class AutomatonFileManager {
     }
 
     public static BufferedImage createDotFileImage() {
-        String[] cmd = { "dot", "-Tpng", "-o" + getDotFileImagePath(), getDotFilePath()};
+        String pathToImage = getDotFileImagePath();
+        // It alsmost seems as if the command can not be run through the jar file.
+        // if it is not run from the command line? Maybe that has to do with permissions
+        // or w/e since otherwise java programs could all execute commands?
         BufferedImage img = null;
 
         try {
-            Process p = Runtime.getRuntime().exec(cmd);
+            Process p = new ProcessBuilder("dot", "-Tpng", "-o" + pathToImage, getDotFilePath()).start();
             p.waitFor();
-            img = ImageIO.read(new File(getDotFileImagePath()));
+            img = ImageIO.read(new File(pathToImage));
         } catch (InterruptedException | IOException e) {
             e.printStackTrace();
         }
@@ -41,7 +44,11 @@ public class AutomatonFileManager {
     }
 
     private static String getDotBasePath() {
-        return getResourceFolder() + "/" + Automaton.NAME;
+        return dotBasePath + "/" + Automaton.NAME;
+    }
+
+    public static void setDotBasePath(String path) {
+        dotBasePath = path;
     }
 
     public static String getDotFileImagePath() {
